# eco_exoskeleton_project

./: README-Eco-Exoskeleton-System.md  README.md  README_ALL.md  algorithm_demo.py  algorithm_manager.py  cli.py  data_processing.py  database_demo.py  database_manager.py  decision_system.py  main.py  module_dependencies.md  mqtt_manager.py  pyproject.toml  sensor_collector.py  system_controller.py  test_sensor_generator.py
eco_exoskeleton_system_py/: README.md  cli.py  config.py  main.py  models.py  test_sensor_generator.py
eco_exoskeleton_system_py/core/: decision_system.py  init.py  log_manager.py  mqtt_manager.py  system_controller.py
esp32_firmware/: CMakeLists.txt  README.md  README_1.md  bubble_machine_module.c  build.sh  debug_helper.cpp  debug_helper.h  greenhouse_module.c  injection_module.c  mqtt_helper.cpp  mqtt_helper.h  sensor_calibration.h  sensor_filter.h  sensor_filter_c.h
src/eco_exoskeleton/: __init__.py  algorithm_demo.py  algorithm_manager.py  cli.py  database_demo.py  decision_system.py  log_manager.py  models.py  mqtt_manager.py  sensor_collector.py  system_controller.py  test_sensor_generator.py
